# oauth-drf-playground

./: README.md  load_data.py  manage.py  pyproject.toml
cart/: models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_category_options.py
oauth_drf_playground/: asgi.py  serializer.py  settings.py  urls.py  views.py  wsgi.py
users/: managers.py  models.py  serializer.py  views.py
users/migrations/: 0001_initial.py
